# TestPypiUpload

./: mkdocs.yml  pyproject.toml
.github/workflows/: action.yml  ci.yml  release.yml  release2.yml
docs/: how-to-guides.md  index.md  reference.md
site/: 404.html  index.html  objects.inv
site/how-to-guides/: index.html
site/reference/: index.html
